added header to html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
 <body>
   <!-- Place your site's HTML here -->
+  <div class="header">
+  <h1>Header</h1>
+  <p>My supercool header</p>
+</div>
   <p>This text will display on your site! Jan 19</p>
   <script src="js/main.js"></script>
 </body>
