added text and formatted it in css

--- a/index.html
+++ b/index.html
@@ -37,15 +37,61 @@
 </div>
 
   <div class="welcome">
-    <p>Welcome to Green Earth Apothecary!</p>
+    <p><strong>Welcome to Green Earth Apothecary!</strong></p>
   </div>
-  <p>At Green Earth Apothecary, we invite you to embark on a journey of natural wellness and vitality. Our passion lies in harnessing the age-old wisdom of herbal remedies to nurture your body, mind, and soul.</p>
+
+  <div class="Mission"> 
+    <p>At Green Earth Apothecary, we invite you to embark on a journey of natural wellness and <br> Our passion lies in harnessing the age-old wisdom of herbal remedies to nurture your body, mind, and soul.</p> 
+  </div>
+
 
   <div class="discover">
-  <p>Discover the Power of Nature</p>
- </div>
+    <p><strong>Discover the Power of Nature</strong></p>
+  </div>
 
-  <p>Explore the incredible potential of herbs as they harmonize with your body's innate healing abilities. Whether you seek to enhance your well-being, find holistic solutions to common ailments, or simply embrace a more natural lifestyle, our carefully curated collection of herbal products awaits you.</p>
+  <div class="explore">
+    <p>Explore the incredible potential of herbs as they harmonize with your body's innate healing.<br> Whether you seek to enhance your well-being, find holistic solutions to common ailments, or simply embrace a more natural lifestyle, our carefully curated collection of herbal products awaits you.<br>
+    Herbal medicine has been trusted for centuries as a holistic approach to achieving and maintaining optimal health and wellness.<br> 
+    Explore the numerous benefits of choosing herbal remedies:</p>
+  </div>
+
+  <div class="benefit">
+    <p><strong>1. Natural and Safe:</strong></p>
+  </div>
+  <div class="benefittxt">
+  <p>Herbal medicines are derived from plants and are generally considered safe with fewer side effects compared to synthetic medications.<br> They work in harmony with your body's natural processes.</p>
+</div>
+  <div class="benefit">
+    <p><strong>2. Holistic Healing:</strong></p>
+  </div>
+  <div class="benefittxt">  
+  <p>Herbs address the root causes of health issues, promoting overall well-being instead of just alleviating symptoms.<br> They treat the whole person: body, mind, and spirit.</p>
+</div>
+  <div class="benefit">
+    <p><strong>3. Personalized Solutions:</strong></p>
+  </div> 
+  <div class="benefittxt"> 
+  <p>Herbal medicine allows for personalized treatments tailored to individual needs.<br> Your unique health concerns can be addressed with a variety of herbs and formulations.</p>
+</div>
+  <div class="benefit">
+    <p><strong>4. Improved Immunity:</strong></p>
+  </div> 
+<div class="benefittxt">
+  <p>Many herbs are known for their immune-boosting properties, helping your body defend against infections and diseases.<br>Our Herbal Cheetsheet shows each herbs benefit.</p>
+</div>
+<div class="benefit">
+    <p><strong>5. Reduced Risk of Dependency:</strong></p>
+  </div>
+<div class="benefittxt">
+  <p>Herbal remedies are non-addictive, reducing the risk of dependency or withdrawal symptoms often associated with some pharmaceuticals.</p>
+</div>
+  <div class="benefit">
+    <p><strong>6.Balanced Energy:</strong></p>
+  </div> 
+<div class="benefittxt">
+ <p>Herbs can help balance and restore your body's natural energy levels, reducing fatigue and enhancing vitality.</p>
+</div>
+
   <script src="js/main.js"></script>
 </body>
 
