--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 </div>
 
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#shop">Shop</a>
-  <a href="#learn">Learn</a>
-  <a href="#about us">About Us</a>
+  <a class="active" href="./index.html">Home</a>
+  <a href="./shop.html">Shop</a>
+  <a href="./learn.html">Learn</a>
+  <a href="./about us.html">About Us</a>
   <input type="text" placeholder="Search..">
 </div>
 
