linked text to page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <p><strong>4. Improved Immunity:</strong></p>
   </div> 
 <div class="benefittxt">
-  <p>Many herbs are known for their immune-boosting properties, helping your body defend against infections and diseases.<br>Our Herbal Cheetsheet shows each herbs benefit.</p>
+  <p>Many herbs are known for their immune-boosting properties, helping your body defend against infections and diseases.<br>Our <a href="./shop.html">Herbal Cheetsheet</a> shows each herb's benefit.</p>
 </div>
 <div class="benefit">
     <p><strong>5. Reduced Risk of Dependency:</strong></p>
