--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
   <input type="text" placeholder="Search..">
 </div>
 
-  <div class="welcome">
-    <p><strong>Welcome to Green Earth Apothecary!</strong></p>
-  </div>
+  <h3>
+    <div class="welcome">
+      <p><strong>Welcome to Green Earth Apothecary!</strong></p>
+    </div>
+  </h3>
 
   <div class="Mission"> 
     <p>At Green Earth Apothecary, we invite you to embark on a journey of natural wellness and <br> Our passion lies in harnessing the age-old wisdom of herbal remedies to nurture your body, mind, and soul.</p> 
@@ -55,41 +57,73 @@
     Explore the numerous benefits of choosing herbal remedies:</p>
   </div>
 
-  <div class="benefit">
-    <p><strong>1. Natural and Safe:</strong></p>
+  <h3>
+    <div class="benefit">
+      <p><strong>1. Natural and Safe:</strong></p>
+    </div>
+   <div class="benefittxt">
+    <p>Herbal medicines are derived from plants and are generally considered safe with fewer side effects compared to synthetic medications.<br> They work in harmony with your body's natural processes.</p>
   </div>
+    <div class="benefit">
+      <p><strong>2. Holistic Healing:</strong></p>
+    </div>
+    <div class="benefittxt">  
+      <p>Herbs address the root causes of health issues, promoting overall well-being instead of just alleviating symptoms.<br> They treat the whole person: body, mind, and spirit.</p>
+    </div>
+    <div class="benefit">
+      <p><strong>3. Personalized Solutions:</strong></p>
+    </div> 
+    <div class="benefittxt"> 
+      <p>Herbal medicine allows for personalized treatments tailored to individual needs.<br> Your unique health concerns can be addressed with a variety of herbs and formulations.</p>
+    </div>
+    <div class="benefit">
+      <p><strong>4. Improved Immunity:</strong></p>
+    </div> 
   <div class="benefittxt">
-  <p>Herbal medicines are derived from plants and are generally considered safe with fewer side effects compared to synthetic medications.<br> They work in harmony with your body's natural processes.</p>
-</div>
-  <div class="benefit">
-    <p><strong>2. Holistic Healing:</strong></p>
+    <p>Many herbs are known for their immune-boosting properties, helping your body defend against infections and diseases.<br>Our <a href="./shop.html">Herbal Cheetsheet</a> shows each herb's benefit.</p>
   </div>
-  <div class="benefittxt">  
-  <p>Herbs address the root causes of health issues, promoting overall well-being instead of just alleviating symptoms.<br> They treat the whole person: body, mind, and spirit.</p>
-</div>
   <div class="benefit">
-    <p><strong>3. Personalized Solutions:</strong></p>
-  </div> 
-  <div class="benefittxt"> 
-  <p>Herbal medicine allows for personalized treatments tailored to individual needs.<br> Your unique health concerns can be addressed with a variety of herbs and formulations.</p>
-</div>
-  <div class="benefit">
-    <p><strong>4. Improved Immunity:</strong></p>
-  </div> 
-<div class="benefittxt">
-  <p>Many herbs are known for their immune-boosting properties, helping your body defend against infections and diseases.<br>Our <a href="./shop.html">Herbal Cheetsheet</a> shows each herb's benefit.</p>
-</div>
-<div class="benefit">
     <p><strong>5. Reduced Risk of Dependency:</strong></p>
   </div>
-<div class="benefittxt">
-  <p>Herbal remedies are non-addictive, reducing the risk of dependency or withdrawal symptoms often associated with some pharmaceuticals.</p>
-</div>
+  <div class="benefittxt">
+    <p>Herbal remedies are non-addictive, reducing the risk of dependency or withdrawal symptoms often associated with some pharmaceuticals.</p>
+  </div>
   <div class="benefit">
     <p><strong>6.Balanced Energy:</strong></p>
   </div> 
-<div class="benefittxt">
- <p>Herbs can help balance and restore your body's natural energy levels, reducing fatigue and enhancing vitality.</p>
+  <div class="benefittxts">
+    <p>Herbs can help balance and restore your body's natural energy levels, reducing fatigue and enhancing vitality.</p>
+  </div>
+</h3>
+
+<div class="tea">
+  <p><strong>Teas</strong></p>
+</div>
+<div class="teas"> 
+ <img src="./img/AdobeStock_115511405_Preview.jpg" alt="">
+  <div class="teatxt">
+    <p>Herbal teas support your overall well-being,<br>nourishing your body, mind, and spirit.<br>Each of our carefully crafted belnds<br> caters to various health concerns.<br>
+  Unlock the power of nature in every sip.<br> Explore our herbal tea collection today.</p>
+  </div>
+</div>
+<div class="oils">
+  <p><strong>Essential Oils</strong></p>
+</div>
+<div class="oil">
+  <img src="./img/essential.oil.final.jpg" alt="oils">
+  <div class="oiltxt">
+    <p>Many essential oils possess natural antibacterial, anti-inflammatory,<br> and antiviral properties, making them valuable for supporting<br> the body's natural healing processes.<br>
+      Essential oils can uplift, calm, and balance your emotions.<br> Inhaling the aromatic scents can help reduce stress, <br>anxiety, and enhance mental clarity and focus.</p>
+  </div>
+</div>
+<div class="supplements">
+  <p><strong>Supplements</strong></p>
+</div>
+<div class="supplement">
+  <img src="./img/supplements.jpg" alt="">
+  <div class="supply">
+    <p>Herbal supplements offer a range of potential benefits<br>for health and well-being. These benefits can vary depending <br>on the specific herbs used and the individual's needs,<br> but some common advantages of herbal supplements include<br> the ability to balance and restore your body's natural<br> energy levels, reducing fatigue and enhancing<br> vitality and overall immunity.</p>
+  </div>
 </div>
 
   <script src="js/main.js"></script>
