--- a/learn.html
+++ b/learn.html
@@ -37,6 +37,40 @@
 </div>
 
   
+<div class="header">
+  <h1>Herbal Medicine, Essential Oils, and Herbal Teas</h1>
+</div>
+
+Welcome to our educational page on Herbal Medicine, Essential Oils, and Herbal Teas. Here, you'll discover the fascinating world of natural remedies and how they can promote health and well-being. We've categorized the information to make it easy for you to explore these topics:
+
+<div class="header">
+  <h1>What is Herbal Medicine?</h1>
+</div>
+<p>Herbal medicine, also known as phytotherapy or botanical medicine, 
+  involves the use of plants, plant extracts, and natural substances to treat various health conditions. 
+  It's an ancient practice that has been used by cultures around the world for centuries.</p>
+
+<p><strong>Benefits of Herbal Medicine</strong></p>
+  <ul>
+  <i>Natural Healing:</i> Herbal remedies can help the body heal itself naturally without the side effects often associated with pharmaceutical drugs.<br>
+  <i>Holistic Approach:</i> Herbal medicine considers the whole person, addressing the root cause of an issue rather than just treating symptoms.<br>
+  <i>Minimal Side-Effects:</i> Herbal remedies are generally gentler on the body, reducing the risk of adverse reactions.</ul>
+<p><strong>Common Herbs in Herbal Medicine</strong></p>
+  <ul>
+  <i>Echinacea:</i> Known for its immune-boosting properties.<br>
+  <i>Ginger:</i> Used for digestive issues and as an anti-inflammatory.<br>
+  <i>Lavender:</i> Effective for stress and anxiety relief.<br>
+  Turmeric: A powerful anti-inflammatory herb.</ul>
+<p><strong>How to Use Herbal Medicine</strong></p>
+  <ul>
+  <p><i>Teas:</i> Steep dried herbs in hot water to create herbal teas.</p>
+  <p><i>Tinctures:</i> Concentrated herbal extracts in alcohol or glycerin.</p>
+  <p><i>Capsules:</i> Convenient for precise dosing.</p></ul>
+
+<p>*Note: We're still new! More information is constantly being added to our website. Check back for updates.</p>
+<p>Whether you're interested in herbal medicine, essential oils, or herbal teas, 
+  there's a world of natural remedies waiting to enhance your health and well-being. 
+  Explore these topics further to discover the incredible benefits of nature's gifts.</p>
   <script src="js/main.js"></script>
 </body>
 
