made final edits to css; added hero image

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
   <input type="text" placeholder="Search..">
 </div>
 
+<div class="hero-image">
+  <img src="./img/AdobeStock_441346636.jpg" alt="">
+  <div class="hero-text">
+    <p><i>Where the Earth meets Health.</i></p>
+  </div>
+</div>
+
   <h3>
     <div class="welcome">
       <p><strong>Welcome to Green Earth Apothecary!</strong></p>
