--- a/learn.html
+++ b/learn.html
@@ -41,7 +41,7 @@
   <h1>Herbal Medicine, Essential Oils, and Herbal Teas</h1>
 </div>
 
-Welcome to our educational page on Herbal Medicine, Essential Oils, and Herbal Teas. Here, you'll discover the fascinating world of natural remedies and how they can promote health and well-being. We've categorized the information to make it easy for you to explore these topics:
+Welcome to our educational page on Herbal Medicine, Essential Oils, and Herbal Teas. <br>Here, you'll discover the fascinating world of natural remedies and how they can promote health and well-being.
 
 <div class="header">
   <h1>What is Herbal Medicine?</h1>
